@startuml Colonies
    skinparam linetype ortho

    entity "Rooms" as R{
        # room_id <<PK>>
        --
        room_code
        ~ hous_id <<FK>>
    }
    entity "Houses" as H{
        # hous_id <<PK>>
        --
        hous_name
        hous_postalAddress
        hous_postalCode
        hous_nameStreet
        hous_capacity
        ~regi_id <<FK>>
    }
    entity "Kids" as K{
        #kid_id <<PK>>
        --
        kid_name
        kid_parentsPhone
        ~regi_id <<FK>>
        ~hous_id <<FK>>
    }
    
    entity "Tutors" as T{
        # tuto_id <<PK>>
        --
        tuto_name
        tuto_phone
        tuto_role
        ~hous_id <<FK>>
    }
    
    entity "Regions" as Z{
        # regi_id
        --
        regi_name
        regi_population
    }

    entity "Activities" as A{
        # acti_id <<PK>>
        ---
        acti_name
    }
    

    entity "Hous_Acti" as HA{
        # hoac_id <<PK>>
        --
        ~ acti_id <<FK>>
        ~ hous_id <<FK>>
    }

    entity "Kids_HoAc" as KHA{
        # kiha_id <<PK>>
        --
        kiha_evaluation
        ~ kid_id <<FK>>
        ~ hoac_id <<FK>>
    }

    H ||-left-o{ R
    H ||--o{ K
    H ||--o{ Z
    H ||--|{ HA
    A ||--|{ HA
    H }o-right-|| T
    K }o-right-|| Z
    K ||--|{ KHA
    HA ||--|{ KHA


@enduml